# Polars-Analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test.ipynb
notebook/: analysis_polars.ipynb  deltalake_0_9_0.ipynb  polars_ingestion_test.ipynb  s3_arrow_connection.ipynb
script/: analysis.py  main.py  transforms.py  write_deltatable.py
src/: analysis.py  duckdb_ingestion.py  duckdb_run.py  main.py  polars_ingestion.py  polars_run.py  s3_connection.py  schemas.py  transforms.py  write_deltatable.py
